# fullstack-ai-saas

./: .gitignore  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: app.py  db.py  jobs.py  main.py
frontend/: app.js  dashboard.html  index.html  styles.css
tests/: test_api.py
web/: Dockerfile  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/dashboard/: page.tsx
web/app/login/: page.tsx
web/lib/: api.ts
