[project]
name = "team-knowledge-app"
version = "1.1.0"
description = "Team Knowledge App — FastAPI backend with Next.js dashboard, doc jobs, Q&A history"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Egor Gavrilov" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "pydantic[email]>=2.6.0",
    "pyjwt>=2.10.0",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy>=2.0.36",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "httpx>=0.28.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
